--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <button>😭</button>
 
                 <div class="sub-grid">
-                    <select class="two-col" id="fontSelect" onchange="onFontChange(this.value)">
+                    <select class="two-col" id="fontSelect" onchange="onChangeFont(this.value)">
                         <option value="Arial">Arial</option>
                         <option value="Verdana">Verdana</option>
                         <option value="Helvetica">Helvetica</option>
@@ -73,6 +73,7 @@
 
     <script src="js/services/util.service.js"></script>
     <script src="js/services/meme.service.js"></script>
+    <script src="js/gallery.controller.js"></script>
     <script src="js/meme.controller.js"></script>
 </body>
 
