Some CSS adjustments

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h4>You can add middle line or remove a line from the meme</h4>
         <h4>The up-down arrow toggles between lines</h4>
         <h4>The trashcan icon clears the canvas entirely</h4>
-        <h2>Editing is done seperately for each line</h2>
+        <h2>Editing is done seperately per line</h2>
         <h4>By default, the top line is selected</h4>
         <h4>You can change the color, bold status, font size, font type and text alignment of a line</h4>
         <h4>Changing the text of a line is done by the input field</h4>
