Line selection fixed (somewhat), you can now drag the lines

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h4>By default, the top line is selected</h4>
         <h4>You can change the color, bold status, font size, font type and text alignment of a line</h4>
         <h4>Changing the text of a line is done by the input field</h4>
-        <h4>To move a line, use the arrow / WASD keys on the keyboard</h4>
+        <h4>To move a line, use the arrow / WASD keys on the keyboard, or just drag it via mouse or touch</h4>
         <h2>Other options</h2>
         <h4>Clicking on "I'm Flexible" gives you a random image from the gallery</h4>
         <h4>The Download options saves the meme in a PNG format</h4>
@@ -79,7 +79,8 @@
                     <a href="#" class="download-link" onclick="downloadMeme(this)" download="my-img.jpg">Download <i
                             class="fa-solid fa-arrow-down"></i></a>
                 </div>
-                <button onclick="onShareToFacebook()" class="two-col share-btn">Share to <i class="fa-brands fa-square-facebook"></i></button>
+                <button onclick="onShareToFacebook()" class="two-col share-btn">Share to <i
+                        class="fa-brands fa-square-facebook"></i></button>
             </div>
         </section>
     </main>
